force-app/main/default/objects/Quote__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <description>bank account No.</description>
    <label>Account No.</label>
    <type>TextArea</type>
</CustomField>