force-app/main/default/objects/Quote__c/fields/Additonal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additonal_Terms__c</fullName>
    <label>Additonal Terms</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>