force-app/main/default/objects/Quote__c/fields/Agreement_No__c.field-meta.xml
<CustomField>
    <fullName>Agreement_No__c</fullName>
    <label>Agreement No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>