force-app/main/default/objects/Quote__c/fields/Bank_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_s_Address__c</fullName>
    <label>Bank&apos;s Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>