force-app/main/default/objects/Quote__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>