force-app/main/default/objects/Quote__c/fields/Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Address__c</fullName>
    <label>Beneficiary Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>