force-app/main/default/objects/Quote__c/fields/Buyer_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Buyer_E_mail__c</fullName>
    <label>Buyer E-mail</label>
    <type>TextArea</type>
</CustomField>