force-app/main/default/objects/Quote__c/fields/Buyer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Fax__c</fullName>
    <label>Buyer Fax</label>
    <type>TextArea</type>
</CustomField>