force-app/main/default/objects/Quote__c/fields/Buyer_Tel__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Tel__c</fullName>
    <label>Buyer Tel</label>
    <type>TextArea</type>
</CustomField>