force-app/main/default/objects/Quote__c/fields/COOP__c.field-meta.xml
<CustomField>
    <fullName>COOP__c</fullName>
    <label>COOP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>