force-app/main/default/objects/Quote__c/fields/Cost_Staff__c.field-meta.xml
<CustomField>
    <fullName>Cost_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Staff</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only the cost team member can be selected.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SD Cost Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteToCostStaff</relationshipName>
    <type>Lookup</type>
</CustomField>