force-app/main/default/objects/Quote__c/fields/Factory_Audit__c.field-meta.xml
<CustomField>
    <fullName>Factory_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factory Audit</label>
    <type>Checkbox</type>
</CustomField>