force-app/main/default/objects/Quote__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>IF( AND( !ISNULL( Total_Cost__c  ) ,!ISNULL( Total_Price__c )) ,  Total_Price__c -  Total_Cost__c , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>