force-app/main/default/objects/Quote__c/fields/Gross_Profit_M__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_M__c</fullName>
    <formula>Total_Price__c -  Total_Cost_M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit(M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>