force-app/main/default/objects/Quote__c/fields/Inquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Status__c</fullName>
    <label>Inquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>