force-app/main/default/objects/Quote__c/fields/IsAutoApproval__c.field-meta.xml
<CustomField>
    <fullName>IsAutoApproval__c</fullName>
    <formula>IF(  AND(Gross_Profit__c &gt;= 0, !CONTAINS( $Profile.Name , &apos;Sales Director&apos;) ,  MONTH( Expiry_Date__c ) == MONTH( TODAY() ) ), TRUE, FALSE)</formula>
    <label>IsAutoApproval</label>
    <type>Checkbox</type>
</CustomField>