force-app/main/default/objects/Quote__c/fields/Loading_Destination_Port__c.field-meta.xml
<CustomField>
    <fullName>Loading_Destination_Port__c</fullName>
    <label>Loading/Destination Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>