force-app/main/default/objects/Quote__c/fields/MDF__c.field-meta.xml
<CustomField>
    <fullName>MDF__c</fullName>
    <label>MDF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>