force-app/main/default/objects/Quote__c/fields/Minimum_Gross_Profit_Margin_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Gross_Profit_Margin_Level__c</fullName>
    <description>Sales Department(TV/Mobile)</description>
    <label>Minimum Gross Profit Margin- Level</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>