force-app/main/default/objects/Quote__c/fields/Net_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Margin__c</fullName>
    <formula>Net_Profit__c /  Total_Sell_in_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>