force-app/main/default/objects/Quote__c/fields/Other_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Terms__c</fullName>
    <label>Other Payment Terms</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>