force-app/main/default/objects/Quote__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>