force-app/main/default/objects/Quote__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms(Delete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OA 30</fullName>
            </value>
            <value>
                <fullName>OA 45</fullName>
            </value>
            <value>
                <fullName>OA 60</fullName>
            </value>
            <value>
                <fullName>OA 90</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>At sight</fullName>
            </value>
            <value>
                <fullName>After/From BL date</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>