force-app/main/default/objects/Quote__c/fields/Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Destination__c</fullName>
    <label>Port of Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>