force-app/main/default/objects/Quote__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>QuoteUsers</relationshipName>
    <type>Lookup</type>
</CustomField>