force-app/main/default/objects/Quote__c/fields/Preshipment_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Preshipment_Inspection__c</fullName>
    <label>Preshipment Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Third party Inspection</fullName>
            </value>
            <value>
                <fullName>Hisense Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>