force-app/main/default/objects/Quote__c/fields/Price_Book_Region__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Region__c</fullName>
    <formula>TEXT(Customer_Name__r.Price_Book_Region__c)</formula>
    <label>Price Book Region</label>
    <type>Text</type>
</CustomField>