force-app/main/default/objects/Quote__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>QuoteToPricebook</relationshipName>
    <type>Lookup</type>
</CustomField>