force-app/main/default/objects/Quote__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>