force-app/main/default/objects/Quote__c/fields/Quotation_Description__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Description__c</fullName>
    <label>Quotation Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>