force-app/main/default/objects/Quote__c/fields/Quote_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_Count__c</fullName>
    <label>Quote Product Count</label>
    <summaryForeignKey>Quote_Product__c.Quote_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>