force-app/main/default/objects/Quote__c/fields/Reference_P_O_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_P_O_No__c</fullName>
    <label>Reference:  P/O No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>