force-app/main/default/objects/Quote__c/fields/Return_Policy__c.field-meta.xml
<CustomField>
    <fullName>Return_Policy__c</fullName>
    <label>Return Policy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>