force-app/main/default/objects/Quote__c/fields/Sample_Testing_OR_Golden_Sample_Confirma__c.field-meta.xml
<CustomField>
    <fullName>Sample_Testing_OR_Golden_Sample_Confirma__c</fullName>
    <label>Sample Testing OR Sample Confirmation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>