force-app/main/default/objects/Quote__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>Seller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>