force-app/main/default/objects/Quote__c/fields/Seller_Address__c.field-meta.xml
<CustomField>
    <fullName>Seller_Address__c</fullName>
    <label>Seller Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>