force-app/main/default/objects/Quote__c/fields/Seller_Attendess__c.field-meta.xml
<CustomField>
    <fullName>Seller_Attendess__c</fullName>
    <label>Seller Attendess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>