force-app/main/default/objects/Quote__c/fields/Total_Cost_M__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_M__c</fullName>
    <label>Total Cost(M)</label>
    <summarizedField>Quote_Product__c.Total_Cost_M__c</summarizedField>
    <summaryForeignKey>Quote_Product__c.Quote_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>