force-app/main/default/objects/Quote__c/fields/Total_Inbound_Outbound_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Outbound_Price__c</fullName>
    <label>Total Inbound/Outbound Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>