force-app/main/default/objects/Quote__c/fields/Total_NNN_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_NNN_Cost__c</fullName>
    <label>Total NNN Cost</label>
    <summarizedField>Quote_Product__c.Total_EXW__c</summarizedField>
    <summaryForeignKey>Quote_Product__c.Quote_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>