force-app/main/default/objects/Quote__c/fields/Total_Sell_in_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sell_in_Price__c</fullName>
    <label>Total Sell-in Price</label>
    <summarizedField>Quote_Product__c.Total_Sell_Price__c</summarizedField>
    <summaryForeignKey>Quote_Product__c.Quote_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>