force-app/main/default/objects/Quote__c/fields/Trade_Term__c.field-meta.xml
<CustomField>
    <fullName>Trade_Term__c</fullName>
    <label>Trade Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>Air Freight</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>DES</fullName>
            </value>
            <value>
                <fullName>DEQ</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>