force-app/main/default/objects/Quote__c/fields/Trade_Term_Delete__c.field-meta.xml
<CustomField>
    <fullName>Trade_Term_Delete__c</fullName>
    <label>Trade Term(Delete)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>