force-app/main/default/objects/Quote__c/recordTypes/Quote_Malaysia.recordType-meta.xml
<RecordType>
    <fullName>Quote_Malaysia</fullName>
    <active>true</active>
    <label>Quote/Malaysia</label>
</RecordType>