force-app/main/default/objects/Quote__c/recordTypes/Quote_Sales_Department_Mobile.recordType-meta.xml
<RecordType>
    <fullName>Quote_Sales_Department_Mobile</fullName>
    <active>true</active>
    <label>Quote/Sales Department(Mobile)</label>
</RecordType>