force-app/main/default/objects/Quote__c/recordTypes/Quote_Sales_Department_TV.recordType-meta.xml
<RecordType>
    <fullName>Quote_Sales_Department_TV</fullName>
    <active>true</active>
    <label>Quote/Sales Department(TV)</label>
</RecordType>