force-app/main/default/objects/Quote__c/recordTypes/Quote_USA_CE.recordType-meta.xml
<RecordType>
    <fullName>Quote_USA_CE</fullName>
    <active>true</active>
    <label>Quote/USA(CE)</label>
</RecordType>