force-app/main/default/objects/Quote__c/recordTypes/Quote_USA_HA.recordType-meta.xml
<RecordType>
    <fullName>Quote_USA_HA</fullName>
    <active>true</active>
    <label>Quote/USA(HA)</label>
</RecordType>