force-app/main/default/objects/Quote__c/validationRules/ExpiryDateMustBeAfterToday.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiryDateMustBeAfterToday</fullName>
    <active>false</active>
    <errorConditionFormula>Expiry_Date__c &lt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>The expiry date must be after today.</errorMessage>
</ValidationRule>