force-app/main/default/objects/Quote__c/listViews/Finance_USA_Quote.listView-meta.xml
<ListView>
    <fullName>Finance_USA_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance(USA)</label>
    <queue>Finance_USA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>